using Microsoft.VisualStudio.TestTools.UnitTesting;

namespace SharedTest.Events.Queue.Strategy.SingleConsumer
{
    [TestClass]
    public class BoundedSingleConsumerChannelStrategy
    {
        // TODO
    }
}
